@@ -34,10 +34,6 @@ namespace GraphX.METRO.Controls
 
         private static async void logic_core_changed(DependencyObject d, DependencyPropertyChangedEventArgs e)
         {
-            //automaticaly assign default file service provider 
-            if(e.NewValue != null && ((IGXLogicCore<TVertex, TEdge, TGraph>)e.NewValue).FileServiceProvider == null)
-                ((IGXLogicCore<TVertex, TEdge, TGraph>)e.NewValue).FileServiceProvider = new FileServiceProviderMETRO();
-
             var graph = d as GraphArea<TVertex, TEdge, TGraph>;
             if (graph == null) return;
             switch (graph.LogicCoreChangeAction)
@@ -1339,48 +1335,48 @@ namespace GraphX.METRO.Controls
 
         #region Save
 
-        public void SerializeToFile(string filename)
+        /// <summary>
+        /// Obtain graph layout data, which can then be used with a serializer.
+        /// </summary>
+        /// <exception cref="GX_InvalidDataException">Occurs when LogicCore or object Id isn't set</exception>
+        public List<GraphSerializationData> ExtractSerializationData()
         {
             if (LogicCore == null)
                 throw new GX_InvalidDataException("LogicCore -> Not initialized!");
-            if (LogicCore.FileServiceProvider == null)
-                throw new GX_ObjectNotFoundException("LogicCore::FileServiceProvider must be set before using file operation methods!");
 
             if (AutoAssignMissingDataId)
-            {
                 AutoresolveIds();
-            }
 
             var dlist = new List<GraphSerializationData>();
             foreach (var item in VertexList) //ALWAYS serialize vertices first
             {
                 dlist.Add(new GraphSerializationData { Position = item.Value.GetPositionGraphX(), Data = item.Key });
-                if (item.Key.ID == -1) throw new GX_InvalidDataException("SerializeToFile() -> All vertex datas must have positive unique ID!");
+                if (item.Key.ID == -1) throw new GX_InvalidDataException("ExtractSerializationData() -> All vertex datas must have positive unique ID!");
             }
             foreach (var item in EdgesList)
             {
-               // item.Key.RoutingPoints = new Point[] { new Point(0, 123), new Point(12, 12), new Point(10, 234.5) };
+                // item.Key.RoutingPoints = new Point[] { new Point(0, 123), new Point(12, 12), new Point(10, 234.5) };
                 dlist.Add(new GraphSerializationData { Position = new Measure.Point(), Data = item.Key });
-                if (item.Key.ID == -1) throw new GX_InvalidDataException("SerializeToFile() -> All edge datas must have positive unique ID!");
+                if (item.Key.ID == -1) throw new GX_InvalidDataException("ExtractSerializationData() -> All edge datas must have positive unique ID!");
             }
-
-            LogicCore.FileServiceProvider.SerializeDataToFile(filename, dlist);
-
+            return dlist;
         }
 
-        public void DeserializeFromFile(string filename)
+        /// <summary>
+        /// Rebuilds the graph layout from serialization data.
+        /// </summary>
+        /// <param name="data">The serialization data</param>
+        /// <exception cref="GX_InvalidDataException">Occurs when LogicCore isn't set</exception>
+        /// <exception cref="GX_SerializationException">Occurs when edge source or target isn't set</exception>
+        public void RebuildFromSerializationData(IEnumerable<GraphSerializationData> data)
         {
             if (LogicCore == null)
                 throw new GX_InvalidDataException("LogicCore -> Not initialized!");
-            if (LogicCore.FileServiceProvider == null)
-                throw new GX_ObjectNotFoundException("LogicCore::FileServiceProvider must be set before using file operation methods!");
 
             RemoveAllEdges();
             RemoveAllVertices();
 
-            var data = LogicCore.FileServiceProvider.DeserializeDataFromFile(filename);
-
-            if (LogicCore.Graph == null) LogicCore.Graph = Activator.CreateInstance<TGraph>();                
+            if (LogicCore.Graph == null) LogicCore.Graph = Activator.CreateInstance<TGraph>();
             else LogicCore.Graph.Clear();
 
             var vlist = data.Where(a => a.Data is TVertex);
@@ -1413,12 +1409,10 @@ namespace GraphX.METRO.Controls
             //update edge layout and shapes manually
             //to correctly draw arrows in any case except they are manually disabled
             UpdateLayout();
-            //TODO
-            //foreach (var item in EdgesList.Values)
-            //   item.OnApplyTemplate();
+            foreach (var item in EdgesList.Values)
+                item.ApplyTemplate();
 
             RestoreAlgorithmStorage();
-
         }
 
         private void RestoreAlgorithmStorage()
